# saham_scanner

./: .gitignore  .~lock.saham_hari_ini.xlsx#  LICENSE  README.md  dump.rdb  main.py  manage.py  package.json  pyproject.toml  saham_hari_ini.xlsx  tailwind.config.js
accounts/: urls.py
accounts/templates/: auth.html
accounts/urls/: __init__.py
accounts/views/: auth.py
saham_sanner/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
scanner_app/: admin.py  apps.py  consumers.py  jobs.py  routing.py  tasks.py
scanner_app/management/commands/: run_scheduler.py
scanner_app/migrations/: 0001_initial.py  0002_remove_daftaremiten_tanggal_mulai.py  0003_listpolasaham_settingpersen.py
scanner_app/models/: __init__.py  daftar_emiten.py
scanner_app/templates/: ambil_data_saham.html  dashboard.html  index.html
scanner_app/templates/modal/: delete_database.html  delete_emiten.html  start.html  stop.html
scanner_app/templates/tabel/: daftar_emiten.html
scanner_app/urls/: __init__.py  ambil_data_saham.py  daftar_saham.py  dashboard.py
scanner_app/views/: ambil_data_saham.py  daftar_saham.py  dashboard.py
static/CACHE/css/: output.56f375112bc2.css  output.6a8d0c42dc26.css  output.cb20cbc1f66d.css  output.f029fcab54d2.css  output.ff4579f01c12.css
static/CACHE/js/: output.3f5561774812.js  output.64dfe1eb8b3f.js  output.68797258cf1e.js  output.9182cda75035.js  output.e9d4507e8f7a.js
static/css/: loader.css  tab_custom.css  tailwindcss.css
static/js/: tabulator.min.js
templates/: base.html
templates/components/header/: index.html  super_user.html
(+3 files in other folders)
