[project]
name = "saham-sanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backtesting>=0.6.5",
    "django>=5.2.6",
    "django-compressor>=4.5.1",
    "djhtml>=3.0.9",
    "openpyxl>=3.1.5",
    "pandas-ta>=0.4.71b0",
    "ruff>=0.13.1",
    "yfinance>=0.2.66",
]
