[project]
name = "saham-sanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backtesting>=0.6.5",
    "celery>=5.6.0",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=5.2.6",
    "django-apscheduler>=0.7.0",
    "django-cacheops>=7.2",
    "django-compressor>=4.5.1",
    "djhtml>=3.0.9",
    "holidays>=0.84",
    "numba>=0.61.2",
    "openpyxl>=3.1.5",
    "pandas-ta>=0.4.71b0",
    "redis>=7.1.0",
    "ruff>=0.13.1",
    "ta-lib>=0.6.8",
    "yfinance>=0.2.66",
]
